--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
   id 'org.springframework.boot' version '1.5.10.RELEASE'
   id 'org.owasp.dependencycheck' version '3.1.1'
   id 'com.github.ben-manes.versions' version '0.17.0'
+  id 'net.ltgt.apt' version '0.10'
 }
 
 group = 'uk.gov.hmcts.reform.sandl.snlapi'
@@ -79,6 +80,9 @@ def versions = [
 ]
 
 dependencies {
+  compileOnly 'org.projectlombok:lombok:1.16.20'
+  apt "org.projectlombok:lombok:1.16.20"
+
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
