--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'application'
-//  id 'checkstyle'
-//  id 'pmd'
+  id 'checkstyle'
+  id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.4.RELEASE'
   id 'org.springframework.boot' version '1.5.10.RELEASE'
@@ -16,20 +16,20 @@ version = '0.0.1'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-//checkstyle {
-//  maxWarnings = 0
-//  toolVersion = '8.8'
-//  // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
-//  configDir = new File(rootDir, 'config/checkstyle')
-//}
-//
-//pmd {
-//  toolVersion = "5.8.1"
-//  ignoreFailures = true
-//  sourceSets = [sourceSets.main, sourceSets.test]
-//  reportsDir = file("$project.buildDir/reports/pmd")
-//  ruleSetFiles = files("config/pmd/ruleset.xml")
-//}
+checkstyle {
+  maxWarnings = 0
+  toolVersion = '8.8'
+  // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
+  configDir = new File(rootDir, 'config/checkstyle')
+}
+
+pmd {
+  toolVersion = "5.8.1"
+  ignoreFailures = true
+  sourceSets = [sourceSets.main, sourceSets.test]
+  reportsDir = file("$project.buildDir/reports/pmd")
+  ruleSetFiles = files("config/pmd/ruleset.xml")
+}
 
 jacoco {
   toolVersion = "0.8.1"
@@ -87,7 +87,6 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: versions.springBoot
 
   compile group: 'ch.qos.logback', name: 'logback-classic', version: versions.logback
   compile group: 'ch.qos.logback', name: 'logback-core', version: versions.logback
