SL-772 related bugfix. Added CORS related changes

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ communication:
 management:
   security:
     enabled: ${MANAGEMENT_SECURITY_ENABLED:true}
+    allowedOrigin: ${ALLOWED_FRONTEND_ORIGIN:*}
+    allowedHeaders: ${ALLOWED_HEADERS:*}
+
 
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
 spring:
