--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -4,6 +4,8 @@ server:
 management:
   security:
     enabled: ${MANAGEMENT_SECURITY_ENABLED:true}
+    allowedOrigin: ${ALLOWED_FRONTEND_ORIGIN:*}
+    allowedHeaders: ${ALLOWED_HEADERS:*}
 
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
 spring:
