--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
   id 'org.owasp.dependencycheck' version '3.1.1'
   id 'com.github.ben-manes.versions' version '0.17.0'
   id 'net.ltgt.apt' version '0.10'
+  id 'org.sonarqube' version '2.6.1'
 }
 
 group = 'uk.gov.hmcts.reform.sandl.snlapi'
@@ -41,6 +42,16 @@ jacocoTestReport {
     xml.enabled = true
     csv.enabled = false
     xml.destination file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+  }
+}
+
+project.tasks['sonarqube'].dependsOn test
+sonarqube {
+  properties {
+    property "sonar.projectName", "Reform :: Send Letter Service 2.0"
+    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
+    property "sonar.jacoco.itReportPath", "${project.buildDir}/jacoco/integration.exec"
+    property 'sonar.coverage.exclusions', "**/config/**"
   }
 }
 
