--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ dependencies {
 
   compile group: 'ch.qos.logback', name: 'logback-classic', version: versions.logback
   compile group: 'ch.qos.logback', name: 'logback-core', version: versions.logback
+  compile group: 'com.microsoft.azure', name: 'applicationinsights-logging-logback', version: '2.0.+'
+
 
   compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
