SL-1003 JWT backend part

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -6,6 +6,8 @@ management:
     enabled: ${MANAGEMENT_SECURITY_ENABLED:true}
     allowedOrigin: ${ALLOWED_FRONTEND_ORIGIN:*}
     allowedHeaders: ${ALLOWED_HEADERS:*}
+    jwtSecret: 'AlaMaKotaAKotMaAle'
+    jwtExpirationInMs: 1800000
 
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
 spring:
