--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,8 @@ dependencies {
   compileOnly 'org.projectlombok:lombok:1.16.20'
   apt "org.projectlombok:lombok:1.16.20"
 
+  compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
