--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,8 @@ dependencies {
   compile group: 'ch.qos.logback', name: 'logback-classic', version: versions.logback
   compile group: 'ch.qos.logback', name: 'logback-core', version: versions.logback
   compile group: 'com.microsoft.azure', name: 'applicationinsights-logging-logback', version: '2.0.+'
+  compile group: 'com.microsoft.azure', name: 'applicationinsights-web', version: '2.+'
+  compile group: 'com.microsoft.azure', name: 'applicationinsights-spring-boot-starter', version: '1.0.0-BETA'
 
 
   compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
