--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,21 @@ jacoco {
   toolVersion = "0.8.1"
 }
 
+
+
 jacocoTestReport {
   executionData(test)
   reports {
     xml.enabled = true
     csv.enabled = false
     xml.destination file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+  }
+
+  afterEvaluate {
+    classDirectories = files(classDirectories.files.collect {
+      fileTree(dir: it,
+        exclude: ['**/*PocHelperController*'])
+    })
   }
 }
 
