--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project.tasks['sonarqube'].dependsOn test
 sonarqube {
   properties {
     property "sonar.projectName", "Reform :: Scheduling & Listing :: snl-api POC build extension"
+    property "sonar.projectKey", "snl-api"
     property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
     property "sonar.jacoco.itReportPath", "${project.buildDir}/jacoco/integration.exec"
     property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
