--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,6 @@ dependencies {
   compile group: 'com.microsoft.azure', name: 'applicationinsights-web', version: '2.+'
   compile group: 'com.microsoft.azure', name: 'applicationinsights-spring-boot-starter', version: '1.0.0-BETA'
 
-
   compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
@@ -134,6 +133,8 @@ dependencies {
 
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
   testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.6'
+  testCompile "com.github.tomakehurst:wiremock:2.18.0"
+
 }
 
 jar {
