SL-1001 added S2S jwt token

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ management:
     allowedHeaders: ${ALLOWED_HEADERS:*}
     jwtSecret: 'AlaMaKotaAKotMaAle'
     jwtExpirationInMs: 1800000
+    events:
+      jwtSecret: "sialaBabaMak"
+      jwtExpirationInMs: 5000
 
 azure:
   application-insights:
