--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -8,6 +8,9 @@ management:
     allowedHeaders: ${ALLOWED_HEADERS:*}
     jwtSecret: 'AlaMaKotaAKotMaAle'
     jwtExpirationInMs: 1800000
+    events:
+      jwtSecret: "FakeSecret1"
+      jwtExpirationInMs: 5000
 
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
 spring:
