--- a/src/test/resources/config/application.yaml
+++ b/src/test/resources/config/application.yaml
@@ -13,7 +13,7 @@ management:
     jwtSecret: 'AlaMaKotaAKotMaAle'
     jwtExpirationInMs: 1800000
     events:
-      jwtSecret: "FakeSecret1"
+      jwtSecret: "sialaBabaMak"
       jwtExpirationInMs: 5000
 
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
