--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ def versions = [
 ]
 
 dependencies {
-  compileOnly 'org.projectlombok:lombok:1.16.20'
+  compile 'org.projectlombok:lombok:1.16.20'
   apt "org.projectlombok:lombok:1.16.20"
 
   compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
