--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,3 +45,6 @@ spring:
 #        remove-abandoned-timeout: 60
 #        log-abandoned: true
 #        abandon-when-percentage-full: 0
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
+
