--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ management:
     allowedOrigin: ${ALLOWED_FRONTEND_ORIGIN:*}
     allowedHeaders: ${ALLOWED_HEADERS:*}
     exposeHeaders: ${EXPOSE_HEADERS:Refreshed-Token}
-    jwtSecret: 'AlaMaKotaAKotMaAle'
+    jwtSecret: ${SNL_FRONTEND_JWT_SECRET:"AlaMaKotaAKotMaAle"}
     jwtExpirationInMs: 1800000
     jwtMaxExpirationInMs: 43200000
     newTokenHeaderName: 'Refreshed-Token'
