hotfix coverage on sonar qube

--- a/build.gradle
+++ b/build.gradle
@@ -193,5 +193,5 @@ sonarqube {
   }
 }
 
-test.finalizedBy integrationFakeEventsTests
+test.finalizedBy integrationTests, integrationFakeEventsTests
 
