--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
   testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.6'
   testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.19.0', ext: 'pom'
 
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.2.5.RELEASE'
+  testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.2.6.RELEASE'
 }
 
 jar {
