--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '2.1'
 
 services:
+  snl-api-db:
+    container_name: snl-api-db
+    build: ./docker/snl-api-db
+    networks:
+    - snl-api-network
+    ports:
+    - "5434:5432"
+    environment:
+    - POSTGRES_USER=snluser
+    - POSTGRES_PASSWORD=snlpass
+    - POSTGRES_DB=snl
   snl-api:
     build:
       context: .
@@ -19,5 +30,15 @@ services:
       - REFORM_TEAM
       - REFORM_ENVIRONMENT
       - SNL_EVENTS_URL=http://localhost:8092
+      - SNL_API_DB_HOST=snl-api-db
+      - SNL_API_DB_PORT=5432
+      - SNL_API_DB_NAME=snl
+      - SNL_API_DB_USERNAME=snluser
+      - SNL_API_DB_PASSWORD=snlpass
     ports:
       - $SERVER_PORT:$SERVER_PORT
+    networks:
+    - snl-api-network
+networks:
+  snl-api-network:
+    driver: bridge
