--- a/src/test/resources/config/application.yaml
+++ b/src/test/resources/config/application.yaml
@@ -5,6 +5,13 @@ communication:
   eventsUrl: ${SNL_EVENTS_URL:http://localhost:8092}
  # Set EVENTS_PORT in BaseIntegrationTest to the same value as the port here
 
+liquibase:
+  enabled: true
+  change-log: classpath:db/db-testdata-changelog.yaml
+  drop-first: true
+  user: sa
+  password:
+
 management:
   security:
     enabled: ${MANAGEMENT_SECURITY_ENABLED:true}
@@ -23,12 +30,19 @@ management:
 spring:
   application:
     name: Spring Boot Template
-#  datasource:
-#      url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#      username: ${DB_USER_NAME}
-#      password: ${DB_PASSWORD}
-#      properties:
-#        charSet: UTF-8
+  datasource:
+    url: jdbc:h2:mem:db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;
+    username: sa
+    password:
+    properties:
+      charSet: UTF-8
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: uk.gov.hmcts.reform.sandl.snlapi.config.H2DbExtendedDialect
 #      tomcat:
 #        max-active: 10
 #        max-idle: 10
