--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ azure:
 #If you use a database then uncomment below lines and update db properties accordingly leaving tomcat connection settings unchanged.
 spring:
   application:
-    name: Spring Boot Template
+    name: snl-api
 #  datasource:
 #      url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 #      username: ${DB_USER_NAME}
