SL-2180 implement logout
Correct trigger function

--- a/src/main/resources/db/schema/SL-2180-implement-logout.yaml
+++ b/src/main/resources/db/schema/SL-2180-implement-logout.yaml
@@ -35,6 +35,7 @@ databaseChangeLog:
             AS $$
               BEGIN
                 DELETE FROM user_tokens WHERE now() > max_expiry;
+                RETURN NULL;
               END;
             $$ LANGUAGE plpgsql;
     - sql:
